# mgmol

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  COPYRIGHT  INSTALL  INSTALL.md  LICENSE  Makefile  README.md  address_blacklist.txt  build_pel.sh
ci/: Dockerfile  address_blacklist.txt  compile_and_run.sh  jenkins_config
cmake_modules/: FindARPACK.cmake  FindCLANG_FORMAT.cmake  FindCOVERAGE.cmake  FindMAGMA.cmake  FindSCALAPACK.cmake  FindTRICUBIC.cmake  FindlibROM.cmake  mgmolFindHDF5.cmake
cmake_toolchains/: quartz.default.cmake
docker/: Dockerfile
drivers/: CMakeLists.txt  check_input.cc  example1.cc  lbfgspp.cc
install/: MakeBGQ.inc  MakeCAD.inc  MakeCOR.inc  MakeEOS.inc  MakePEL.inc  MakeSUM.inc  MakeTIT.inc  Makefile.in
potentials/: README  pseudo.Al_LDA_FHI  (+50 more)
src/: ABPG.cc  ABPG.h  AOMMprojector.cc  AOMMprojector.h  AndersonMix.cc  AndersonMix.h  BasicDataDistributors.cc  BasicDataDistributors.h  BlockVector.cc  BlockVector.h  CMakeLists.txt  ChebyshevApproximation.cc  ChebyshevApproximation.h  ChebyshevApproximationFunction.h  ChebyshevApproximationInterface.cc  ChebyshevApproximationInterface.h  ClusterOrbitals.cc  ClusterOrbitals.h  ColoredRegions.cc  ColoredRegions.h  Constraint.h  ConstraintSet.cc  ConstraintSet.h  Control.cc  Control.h  DFTsolver.cc  DFTsolver.h  DMStrategy.h  DMStrategyFactory.cc  DMStrategyFactory.h  DavidsonSolver.cc  DavidsonSolver.h  DensityMatrix.cc  DensityMatrix.h  DensityMatrixSparse.cc  DensityMatrixSparse.h  DielectricControl.cc  DielectricControl.h  DistMatrix2SquareLocalMatrices.cc  DistMatrix2SquareLocalMatrices.h  (+271 more)
src/DistMatrix/: BlacsContext.cc  BlacsContext.h  CMakeLists.txt  Cblacs.h  DistMatrix.cc  DistMatrix.h  DistMatrixTools.cc  DistMatrixTools.h  DistMatrixWithSparseComponent.h  DistVector.h  MGmol_scalapack.h  MPI_AllToSome.cc  MPI_AllToSome.h  MPI_DistMatrixCommunicator.h  MatricesBlacsContext.cc  MatricesBlacsContext.h  RemoteTasksDistMatrix.h  SparseDistMatrix.cc  SparseDistMatrix.h  SubMatrices.cc  SubMatrices.h  SubMatricesIndexing.cc  SubMatricesIndexing.h  blacs.h  module.mk
src/linear_algebra/: CMakeLists.txt  MGmol_blas1.h  blas2_c.h  blas3_c.h  lapack_c.h  memory_space.h  module.mk  mputils.cc  mputils.h  serial_functions.cc
src/local_matrices/: CMakeLists.txt  LocalMatrices.cc  LocalMatrices.h  LocalVector.h  SquareLocalMatrices.cc  SquareLocalMatrices.h  SquareSubMatrix.cc  SquareSubMatrix.h  module.mk
src/numerical_kernels/: CMakeLists.txt  module.mk  numerical_kernels.h  rho.cc
src/pb/: CMakeLists.txt  Delh4.h  DielFunc.cc  DielFunc.h  FDkernels.cc  FDkernels.h  FDoper.cc  FDoper.h  FDoperInterface.h  Grid.cc  Grid.h  GridFunc.cc  GridFunc.h  GridFuncInterface.h  GridFuncVector.cc  GridFuncVector.h  GridFuncVectorInterface.h  Lap.cc  Lap.h  Laph2.cc  Laph2.h  Laph4.cc  Laph4.h  Laph4M.cc  Laph4M.h  Laph4MP.h  Laph6.cc  Laph6.h  Laph8.cc  Laph8.h  MGkernels.cc  MGkernels.h  Mgm.h  Oper.h  PB.cc  PB.h  PBh2.cc  PBh2.h  PBh4.cc  PBh4.h  (+25 more)
src/radial/: CMakeLists.txt  RadialFunction.cc  RadialFunction.h  RadialInter.cc  RadialInter.h  RadialMeshFunction.cc  RadialMeshFunction.h  module.mk
src/rom/: CMakeLists.txt  romOffline.cc  romOffline.h
src/sparse_linear_algebra/: CMakeLists.txt  DataDistribution.cc  DataDistribution.h  DirectionalReduce.cc  DirectionalReduce.h  LinearSolver.cc  LinearSolver.h  LinearSolverMatrix.cc  LinearSolverMatrix.h  PackedCommunicationBuffer.cc  PackedCommunicationBuffer.h  PreconILU.cc  PreconILU.h  SparseRow.cc  SparseRow.h  SparseRowAndTable.cc  SparseRowAndTable.h  Table.cc  Table.h  VariableSizeMatrix.cc  VariableSizeMatrix.h  VariableSizeMatrixInterface.h  module.mk
src/tools/: CMakeLists.txt  Index.h  MGmol_MPI.cc  MGmol_MPI.h  MPIdata.cc  MPIdata.h  OptionDescription.cc  OptionDescription.h  SaveData.h  Signal.h  Signal_mgmol.h  SymmetricMatrix.cc  SymmetricMatrix.h  Timeout.h  Timer.cc  Timer.h  Vector3D.cc  Vector3D.h  coloring.cc  coloring.h  entropy.cc  entropy.h  fermi.cc  fermi.h  mdim.h  memory_space.h  mgmol_Signal.h  mgmol_mpi_tools.cc  mgmol_mpi_tools.h  module.mk  random.cc  random.h  read.h
src/unused/: KBPsiMatrix.cc  KBPsiMatrix.h  radial_functions.cc
tests/: CMakeLists.txt  testBatchLaph4.cc  testBlacsContext.cc  testConditionDistMatrix.cc  testConditionDistMatrixPower.cc  testDensityMatrix.cc  testDirectionalReduce.cc  testDistMatrix.cc  testDistVector.cc  testGramMatrix.cc  testHDF5P.cc  testIons.cc  testLaph4.cc  testMGkernels.cc  testMPI.cc  testMagmaOpenmp.cc  testOpenmpOffload.cc  testPower.cc  testPowerDistMatrix.cc  testReplicated2DistMatrix.cc  testReplicatedMatrix.cc  testSetGhostValues.cc  testSuperSampling.cc  testTradeGhostValues.cc  testVariableSizeMatrix.cc  ut_magma_main.cc  ut_main.cc  ut_serial_main.cc
tests/Anderson/: Solution.cc  Solution.h  testAndersonMix.cc
tests/BandGapN2/: mgmol.cfg  test.py
tests/Chebyshev/: cheb.cfg  test.py
tests/Cl2_ONCVPSP_LDA/: coords.in  mgmol.cfg  test.py
tests/ContinuumSolvent/: coords.in  lrs.in  mgmol_diel.cfg  test.py
tests/DMandEnergyAndForces/: coords.in  mgmol.cfg  test.py  testDMandEnergyAndForces.cc
tests/Davidson/: davidson.cfg  test.py
tests/EnergyAndForces/: mgmol.cfg  test.py  testEnergyAndForces.cc
tests/FIRE/: coords.in  fire1.cfg  fire2.cfg  lrs.in  test.py
tests/Fatom/: F.xyz  mgmol.cfg  test.py
tests/LBFGS/: lbfgs.cfg  lbfgs1.cfg  lbfgs2.cfg  test.py
tests/MD_D72/: coords.in  lrs.in  mgmol_md.cfg  mgmol_quench.cfg  test.py
tests/MLWF/: mlwf.cfg  test.py
tests/MVP/: coords.in  mvp.cfg  test.py
tests/ProjectedMatrices/: quenchExact.cfg  quenchShortSighted.cfg  test.py
tests/ROM/test_rom_poisson/: carbyne.in  carbyne.ion.cfg  carbyne.poisson.cfg
tests/ReplicatedSP2/: lrs.in  mgmol.cfg  test.py
tests/ShortSighted/: md.cfg  quench.cfg  test.py
tests/SiH4/: mgmol.cfg  testSiH4.py
tests/SpinO2/: coords.in  mgmol_spin1.cfg  test.py
tests/SpinO2LDA/: coords.in  lrs.in  mgmol.cfg  test.py
tests/SpreadPenalty/: coords.in  lrs.in  mgmol.cfg  test.py
tests/WFEnergyAndForces/: mgmol.cfg  sih4.xyz  test.py  testWFEnergyAndForces.cc
(+238 files in other folders)
